# mf2-i18n

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/mf2-i18n-cli/: Cargo.toml
crates/mf2-i18n-cli/src/: artifacts.rs  catalog_builder.rs  catalog_reader.rs  cli.rs  command_build.rs  command_coverage.rs  command_extract.rs  command_pseudo.rs  command_sign.rs  command_validate.rs  compiler.rs  config.rs  error.rs  extract.rs  extract_pipeline.rs  id_map.rs  lexer.rs  locale_sources.rs  main.rs  manifest.rs  mf2_source.rs  micro_locales.rs  pack_encode.rs  parser.rs  validator.rs
crates/mf2-i18n-core/: Cargo.toml
crates/mf2-i18n-core/src/: args.rs  bytecode.rs  format_backend.rs  interpreter.rs  language_tag.rs  lib.rs  negotiation.rs  pack_catalog.rs  types.rs
crates/mf2-i18n-embedded/: Cargo.toml
crates/mf2-i18n-embedded/src/: lib.rs  runtime.rs
crates/mf2-i18n-leptos/: Cargo.toml
crates/mf2-i18n-runtime/: Cargo.toml
crates/mf2-i18n-runtime/src/: error.rs  id_map.rs  lib.rs  loader.rs  runtime.rs  signing.rs
crates/mf2-i18n-server/: Cargo.toml
crates/mf2-i18n-server/src/: lib.rs
crates/mf2-i18n-wasm/: Cargo.toml
crates/mf2-i18n-wasm/src/: lib.rs
crates/mf2_i18n_cli/: Cargo.toml
crates/mf2_i18n_cli/src/: diagnostic.rs  main.rs
crates/mf2_i18n_core/: Cargo.toml
crates/mf2_i18n_core/src/: args.rs  bytecode.rs  error.rs  interpreter.rs  lib.rs  pack.rs  pack_catalog.rs
crates/mf2_i18n_embedded/: Cargo.toml
crates/mf2_i18n_embedded/src/: lib.rs
crates/mf2_i18n_leptos/: Cargo.toml
crates/mf2_i18n_runtime/: Cargo.toml
crates/mf2_i18n_server/: Cargo.toml
crates/mf2_i18n_wasm/: Cargo.toml
docs/: README.md
test-data/: README.md
tools/: id_salt.txt
tools/ci/: README.md
tools/release/: README.md
