[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Tyson Lupul <tyson@radroots.org>"]
readme = "README.md"
repository = "https://github.com/triesap/mf2-i18n"
rust-version = "1.92.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
