[package]
name = "mf2-i18n-embedded"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
name = "mf2_i18n_embedded"

[features]
default = []
std = []

[dependencies]
